log
Thu 04 May 2023 04:24:42 PM UTC: 
 tests:  0|5
total_score: 0/70
b173ece
Thu 04 May 2023 04:35:58 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:26: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |               for(num = 1, num<= 9 ; num++)
      |                          ^
sudoku.c:61:43: error: expected ‘;’ before ‘)’ token
   61 |               for(num = 1, num<= 9 ; num++)
      |                                           ^
      |                                           ;
cc1: all warnings being treated as errors
Compilation failed
2a560dd
Thu 04 May 2023 04:36:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3cabe6a
Thu 04 May 2023 05:28:13 PM UTC: 
 sudoku.c | 45 +++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 45 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   57 |       if(num !=0)
      |         ^
sudoku.c:66:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   66 |       if(numColumna !=0)
      |         ^
sudoku.c:53:9: error: unused variable ‘columnas’ [-Werror=unused-variable]
   53 |     int columnas[10]={0,0,0,0,0,0,0,0,0};
      |         ^~~~~~~~
sudoku.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1307830
Thu 04 May 2023 05:28:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   57 |       if(num !=0)
      |         ^
sudoku.c:66:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   66 |       if(numColumna !=0)
      |         ^
sudoku.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a1615fd
Thu 04 May 2023 05:30:01 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bdaa3ad
Thu 04 May 2023 05:30:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4219433
Thu 04 May 2023 05:30:36 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c:97:1: error: expected identifier or ‘(’ before ‘}’ token
   97 | }
      | ^
Compilation failed
2e279bc
Thu 04 May 2023 05:30:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
233a400
